--- a/app/upload-product.html
+++ b/app/upload-product.html
@@ -58,6 +58,79 @@
       </div>
     </div>
   </header>
+  <main class="main upload-product">
+    <div class="breadcrumbs">
+      <div class="container">
+        <ul class="breadcrumbs__list">
+          <li class="breadcrumbs-items">
+            <a href="#">Home</a>
+          </li>
+          <li class="breadcrumbs-items">
+            <span>Product Page</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container">
+      <div class="upload-product__inner">
+        <div class="upload-product__title">
+          Upload Your item
+        </div>
+        <form class="upload-product__form">
+          <div class="upload-product__item">
+            <label>Select Categories<sup>*</sup></label>
+            <select required name="" id="">
+              <option value="">Select</option>
+              <option value=""></option>
+              <option value=""></option>
+            </select>
+          </div>
+          <div class="upload-product__item">
+            <label>Product Name<sup>*</sup></label>
+            <input required type="text" placeholder="Enter your product name here ...">
+          </div>
+          <div class="upload-product__item">
+            <label>Product Description<sup>*</sup></label>
+            <textarea required placeholder="<h1> Type your text  here </h1>"></textarea>
+          </div>
+          <div class="upload-product__item">
+            <label>Upload Main File<sup>*</sup></label>
+            <input required type="file"></div>
+          <div class="upload-product__item">
+            <label>Upload Screenshots<sup>*</sup></label>
+            <input required type="file">
+          </div>
+          <div class="upload-product__item">
+            <label>File Included<sup>*</sup></label>
+            <input required placeholder="Select File Type " type="text">
+          </div>
+          <div class="upload-product__item">
+            <label>File Dimensions<sup>*</sup></label>
+            <input required placeholder="Enter the item  dimentionss here ..." type="text">
+          </div>
+          <div class="upload-product__item">
+            <label>Item Tags<sup>*</sup></label>
+            <input required type="text" placeholder="Enter Tag Here">
+          </div>
+          <div class="upload-product__title">
+            Set Your Price (US$)
+          </div>
+          <div class="upload-product__item">
+            <label>Regular License<sup>*</sup></label>
+            <input required type="number" placeholder="$00.00">
+          </div>
+          <div class="upload-product__item">
+            <label>Extended License<sup>*</sup></label>
+            <input required type="number" placeholder="$00.00">
+          </div>
+        </form>
+      </div>
+    </div>
+  </main>
+
+
+
+
 
 
   <footer class="footer">
@@ -149,7 +222,6 @@
     </div>
   </footer>
 
-
   <div class="popup-login" id="modal">
     <div class="popup-login__title">
       login
@@ -168,7 +240,6 @@
       <a class="popup-login__lost" href="#">Lost Password?</a>
     </form>
   </div>
-
 
 
 
