mobile version of tabs and author portfolio on product-details page

--- a/app/product-details.html
+++ b/app/product-details.html
@@ -63,18 +63,18 @@
 <main class="main product-details">
 <div class="container">
 
-  <div class="col-9">
-    <div class="tabs__wrapper row">
-      <div class="tab col-3">
+  <div class="col-lg-9 col-md-12">
+    <div class="tabs__wrapper">
+      <div class="tab col-md-3">
         Item Features
       </div>
-      <div class="tab col-3">
+      <div class="tab col-md-3">
         Comments
       </div>
-      <div class="tab col-3">
+      <div class="tab col-md-3">
         Reviews
       </div>
-      <div class="tab col-3">
+      <div class="tab col-md-3">
         Support
       </div>
       <div class="tab-content">
@@ -196,7 +196,7 @@
         More Product by PsdBosS
       </div>
       <div class="author-portfolio__items">
-        <div class="col-lg-4 col-md-6 col-12 author-portfolio__item">
+        <div class="col-xl-4 col-md-5 col-sm-6 author-portfolio__item">
           <a href="#" class="author-portfolio__item-wrapper">
             <img src="img/author-portfolio_img.jpg" alt="">
             <div class="item-info">
@@ -206,7 +206,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 author-portfolio__item">
+        <div class="col-xl-4 col-md-5 col-sm-6 author-portfolio__item">
           <a href="#" class="author-portfolio__item-wrapper">
             <img src="img/author-portfolio_img.jpg" alt="">
             <div class="item-info">
@@ -216,7 +216,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 author-portfolio__item">
+        <div class="col-xl-4 col-md-5 col-sm-6 author-portfolio__item">
           <a href="#" class="author-portfolio__item-wrapper">
             <img src="img/author-portfolio_img.jpg" alt="">
             <div class="item-info">
@@ -226,7 +226,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 author-portfolio__item">
+        <div class="col-xl-4 col-md-5 col-sm-6 author-portfolio__item">
           <a href="#" class="author-portfolio__item-wrapper">
             <img src="img/author-portfolio_img.jpg" alt="">
             <div class="item-info">
@@ -236,7 +236,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 author-portfolio__item">
+        <div class="col-xl-4 col-md-5 col-sm-6 author-portfolio__item">
           <a href="#" class="author-portfolio__item-wrapper">
             <img src="img/author-portfolio_img.jpg" alt="">
             <div class="item-info">
@@ -246,7 +246,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 author-portfolio__item">
+        <div class="col-xl-4 col-md-5 col-sm-6 author-portfolio__item">
           <a href="#" class="author-portfolio__item-wrapper">
             <img src="img/author-portfolio_img.jpg" alt="">
             <div class="item-info">
